--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="timer" id="timer-1">
         <p class="clockface js-clockface"></p>
         
-        <div class="field">
+     <!-- <div class="field">
             <span class="value" data-value="days"></span>
             <span class="label">Days</span>
         </div>
@@ -32,7 +32,7 @@
         <div class="field">
             <span class="value" data-value="secs"></span>
             <span class="label">Seconds</span>
-        </div>
+        </div>-->
     </div>
     <script src="./index.js"></script>
 </body>
